--- a/NSubstituteExample/NSubstituteExample.csproj
+++ b/NSubstituteExample/NSubstituteExample.csproj
@@ -48,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Class1.cs" />
+    <Compile Include="Classes\OnceOffCommandRunner.cs" />
+    <Compile Include="Classes\CommandWatcher.cs" />
     <Compile Include="Classes\CommandRepeater.cs" />
     <Compile Include="Classes\SomethingThatNeedsACommand.cs" />
     <Compile Include="Interfaces\ICalculator.cs" />
