--- a/NSubstituteExample/NSubstituteExample.csproj
+++ b/NSubstituteExample/NSubstituteExample.csproj
@@ -55,7 +55,9 @@
     <Compile Include="Interfaces\ICalculator.cs" />
     <Compile Include="Interfaces\IFoo.cs" />
     <Compile Include="Interfaces\ICommand.cs" />
+    <Compile Include="Interfaces\IFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\ArgumentMatchingTests.cs" />
     <Compile Include="Tests\CalculatorTests.cs" />
     <Compile Include="Tests\CreatingSubstituteTests.cs" />
     <Compile Include="Tests\ReceivedTests.cs" />
