--- a/NSubstituteExample/NSubstituteExample.csproj
+++ b/NSubstituteExample/NSubstituteExample.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\ArgumentMatchingTests.cs" />
     <Compile Include="Tests\CalculatorTests.cs" />
+    <Compile Include="Tests\CallbackTests.cs" />
     <Compile Include="Tests\CreatingSubstituteTests.cs" />
     <Compile Include="Tests\ReceivedTests.cs" />
     <Compile Include="Tests\ReturnTests.cs" />
